<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.blaze.house.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

    <!-- Udfps options -->
    <PreferenceCategory
        android:key="udfps_category"
        android:title="@string/udfps_category">

        <Preference
            android:key="udfps_settings"
            android:title="@string/udfps_settings_title"
            android:summary="@string/udfps_settings_summary"
            android:fragment="com.blaze.house.fragments.UdfpsSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

        <com.blaze.house.preferences.SystemSettingSwitchPreference
            android:key="enable_ripple_effect"
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="true" />

	<SwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:persistent="false"
            android:defaultValue="true" />

    </PreferenceCategory> 

    <PreferenceCategory
        android:title="Custom Lockscreen Clock">

	<Preference
            android:key="lockscreen_preview"
            settings:layout="@layout/lockscreen_preview" />

        <com.blaze.house.preferences.SystemSettingListPreference
            android:entries="@array/clock_style_entries"
            android:title="Custom Clock style"
            android:key="clock_style"
            android:defaultValue="0"
            android:entryValues="@array/clock_style_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/general_category">

	<com.blaze.house.preferences.SystemSettingListPreference
            android:key="screen_off_animation"
            android:title="@string/screen_off_animation_title"
            android:entries="@array/screen_off_animation_entries"
            android:entryValues="@array/screen_off_animation_values"
            android:summary="%s"
            android:defaultValue="0" />

	<com.blaze.house.preferences.SystemSettingSwitchPreference
            android:key="secure_lockscreen_qs_disabled"
            android:title="@string/disable_qs_title"
            android:summary="@string/disable_qs_summary"
            android:defaultValue="false" />

	<com.blaze.house.preferences.GlobalSettingSwitchPreference
            android:key="wake_when_plugged_or_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" /> 

    </PreferenceCategory>


    <!-- lockscreen album art customizations -->
    <PreferenceCategory
        android:title="@string/lockscreen_media" >

          <Preference
               android:key="pulse_settings"
               android:fragment="com.blaze.house.fragments.PulseSettings"
               android:title="@string/pulse_settings"
               android:summary="@string/pulse_settings_summary" />
     </PreferenceCategory>

</PreferenceScreen>
